<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    >

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/header_border"
        android:gravity="center_vertical">

        <ImageButton
            android:id="@+id/backbutton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:padding="12dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_arrow_left_icon"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Checkout"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>




    <LinearLayout
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:orientation="vertical">
        <RadioButton
            android:id="@+id/radioButton5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="New address" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Fullname *">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fullname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="Phone *">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Province and District Spinner -->

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="Province/District/Ward">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/addressInput"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/ic_angle_right_icon"
                android:focusable="false"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>
        <!-- Address Field -->

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="Specific address">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/n_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
    <!-- Input Fields -->


    <!-- Divider -->
    <TextView
        android:layout_margin="8dp"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Or choose from a preset"
        android:textSize="20sp"
        android:textStyle="bold"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#D3D3D3"
        android:layout_marginVertical="5dp" />

    <!-- Saved Addresses Section -->
    <!-- Saved Addresses Section -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbars="none">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!-- RecyclerView for Saved Addresses -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rc_trend"
                android:paddingHorizontal="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>



    <!-- Continue to Payment Button -->
    <TextView
        android:id="@+id/continue_button"
        android:clickable="true"
        android:focusable="true"
        android:textAlignment="center"
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="Continue to payment"
        android:background="@drawable/clickable_textview_button"
        android:layout_marginTop="20dp" />

</LinearLayout>
